# PANZI-Panner

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  build_linux.sh  build_macos.sh  build_windows.ps1  llms.txt  panzi-manifest.json
Source/: Config.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AutoPanDSP.h  BakedCoefficients.h  DelayLine.h  PanziEngine.h  PolyhedralTopology.h  RbjShelf.h  SvfLowpass.h  TopologyBaker.h
docs/: ARC_GOVERNANCE.md  ORIGIN_CONVERSATION.md  PANZI_DSP_ARCHITECTURE.md  PANZI_PRODUCTION_DOCS.md
presets/: PANZI_factory_presets.json
scripts/: validate_repo.py
